# agents

./: README.md
code_agent/: .env.example  .gitignore  CHANGELOG.md  COPILOT_INTEGRATION.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  SETUP.md  final_test.json  refactor_plan.json  requirements.txt  sample.py  test_integration.py  test_scanner.py
code_agent/.github/: copilot-instructions.md
code_agent/src/: agent.py  config.py  llm_client.py  orchestrator.py  schemas.py
code_agent/src/agents/: analysis.py  planner.py  rate_limiter.py  scanner.py  scanner_config.py  scanner_exceptions.py  style.py
code_review_agent/: README.md  bad_example.py  pyproject.toml
code_review_agent/review_agent/: __init__.py  __main__.py
code_review_agent/review_agent/core/: __init__.py  findings.py
code_review_agent/review_agent/passes/: __init__.py  correctness.py  performance.py  security.py  style.py
code_review_agent/tests/: conftest.py  test_cli.py  test_correctness.py  test_findings.py  test_performance.py  test_security.py  test_style.py
parser_agent/: hn_part_time_jobs.py
research_agent/: .env.example  .gitignore  README.md  format.sh  lint.sh  main.py  pyproject.toml  requirements.txt
research_agent/src/: __init__.py  config.py  coordinator.py  models.py
research_agent/src/agents/: __init__.py  base_agent.py  fact_checker.py  researcher.py  synthesizer.py
research_agent/tests/: conftest.py  test_agents.py  test_config.py  test_coordinator.py  test_models.py
